<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.android.example.github.vo.Status" />

        <import type="com.android.example.github.vo.Resource" />

        <variable
            name="repo"
            type="com.android.example.github.vo.Repo" />

        <variable
            name="repoResource"
            type="Resource" />

        <variable
            name="contributorsStatus"
            type="com.android.example.github.vo.Status" />

        <variable
            name="retryCallback"
            type="com.android.example.github.ui.common.RetryCallback" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/nav_buttons_create_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_chapter_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add Chapter" />

                <Button
                    android:id="@+id/remove_chapter_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Remove Chapter" />

                <Button
                    android:id="@+id/finish_story_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Finish" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_buttons_create_exposition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_text_exposition_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Text" />

                <Button
                    android:id="@+id/add_picture_exposition_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Picture" />

                <Button
                    android:id="@+id/add_audio_exposition_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Audio" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_buttons_radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/radius_increment_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Radius +" />

                <Button
                    android:id="@+id/radius_decrement_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Radius -" />
            </LinearLayout>


            <ScrollView
                android:id="@+id/chapter_scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/chapter_list_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Chapter 1" />
                </LinearLayout>
            </ScrollView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/contributor_list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/contributor_item" />

        </LinearLayout>


    </LinearLayout>
</layout>
