...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:visibleGone="@{loadingMore}" />

        <Button
            android:id="@+id/create_story_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Create Story"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/repo_list"
            android:layout_width="0dp"
...
